# traverse

./: Cargo.toml  test_config.json
src/: main.rs
src/data/: init.rs  mod.rs  query.rs
src/load/: mod.rs  parse_data.rs  parse_tables.rs
src/script/: core.rs  mod.rs
tests/test_dir/: data.json  schema.json
tests/test_dir/output/: valve_io.json
tests/test_dir/scripts/: valve_io.json
