[package]
name = "traverse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
full = "0.3.0"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio-native-tls"]}
tokio = {version = "1.49.0", features=["full"]}
tera = "1.19"
once_cell = "1.19"
